kubernetes/apps/network/adguard-home/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-home
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - "adguard.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: adguard-home
          port: 3000
